cli/tests/snapshot/inputs/errors/json_but_its_yaml.ncl
# capture = 'stderr'
# command = ['eval']
import "../../imports/map.yaml" as 'Json
